// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChecklistShiftTrigger > renders correctly with both offsets enabled 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="false"
        maxhours="99"
        modelvalue="3600"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="false"
        maxhours="99"
        modelvalue="1800"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > renders correctly with both offsets null 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > renders correctly with end error 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="true"
        maxhours="99"
        modelvalue="90000"
      />
      <span
        class="ma-1 text-caption text-error"
      >
        Shift duration (max 24 h)
      </span>
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > renders correctly with only end offset enabled 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="false"
        maxhours="99"
        modelvalue="1800"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > renders correctly with only start offset enabled 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="false"
        maxhours="99"
        modelvalue="0"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > renders correctly with start error 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="true"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="false"
        error="true"
        maxhours="99"
        modelvalue="90000"
      />
      <span
        class="ma-1 text-caption text-error"
      >
        Shift duration (max 24 h)
      </span>
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="false"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;

exports[`ChecklistShiftTrigger > validate > renders checkboxes with error state after validate with no selection 1`] = `
<div
  data-v-app=""
>
  
  
  
  
  
  <div
    class="d-flex flex-column full-width pa-2"
  >
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="true"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        after shift start
      </span>
    </span>
    <!--v-if-->
    
    
    <span
      class="d-flex align-center"
    >
      <evocon-v-checkbox-stub
        dark="false"
        disabled="false"
        error="true"
        label=""
        modelvalue="false"
        sublabel=""
        truevalue="true"
      />
      <evocon-duration-chip-stub
        class="ma-1"
        disabled="true"
        error="false"
        maxhours="99"
      />
      <!--v-if-->
      <span
        class="ml-1"
      >
        before shift end
      </span>
    </span>
    <!--v-if-->
    
    
  </div>
  
</div>
`;
